--- a/pom.xml
+++ b/pom.xml
@@ -6,5 +6,5 @@
     <artifactId>helloworld</artifactId>
     <packaging>war</packaging>
     <version>2.0</version>
-    <name>Vaadin Addressbook example</name>
+    <name>hello world example</name>
  </project>
